--- a/style.default-clean.css
+++ b/style.default-clean.css
@@ -1,4 +1,13 @@
 /* 
+========================================= 
+========================================= 
+
+Bootstrapious Boilerplate Template
+
+========================================= 
+========================================= */
+/*
+*
 * =====================
 * GENERAL
 * =====================
@@ -148,10 +157,6 @@ INTRO SECTION
   font-size: 1.35rem;
 }
 
-.headshot {
-  border-radius: 50%;
-}
-
 .content {
   position: relative;
   width: 100%;
@@ -176,12 +181,43 @@ INTRO SECTION
 /*
 *
 =====================
-SOCIALS FOR ABOUT SECTION
+SERVICES SECTION
 =====================
 *
 */
+.services .box {
+  margin-top: 20px;
+}
+
+.services .icon {
+  font-size: 50px;
+  color: #262626;
+}
+
+/*
+*
+=====================
+MAP SECTION
+=====================
+*
+*/
+#map {
+  height: 600px;
+}
+
+/*
+*
+=====================
+CONTACT SECTION
+=====================
+*
+*/
+.contact-form {
+  margin-bottom: 40px;
+}
+
 p.social {
-  text-align: left;
+  text-align: center;
   margin-top: 20px;
 }
 
@@ -205,36 +241,24 @@ p.social a i {
   line-height: 38px;
 }
 
-p.social a.github {
-  background-color: #666;
+p.social a.facebook {
+  background-color: #ccc;
 }
 
-p.social a.linkedin {
+p.social a.gplus {
   background-color: #333;
+}
+
+p.social a.twitter {
+  background-color: #aaa;
+}
+
+p.social a.instagram {
+  background-color: #999;
 }
 
 p.social a.email {
   background-color: #666;
-}
-
-/*
-*
-=====================
-PORTFOLIO SECTION
-=====================
-*
-*/
-.services .box {
-  margin-top: 20px;
-}
-
-.services .icon {
-  font-size: 50px;
-  color: #262626;
-}
-
-.img-fluid {
-  margin-bottom: 20px;
 }
 
 /*
@@ -253,52 +277,44 @@ footer {
   margin-bottom: 40px;
   color: #eee;
   font-style: italic;
-  text-align: center;
 }
 
 .copyright p.credit {
-  text-align: center;
+  text-align: right;
 }
 
 .copyright p.credit a {
   color: #eee;
 }
 
-p.social2 {
-  text-align: center;
-  margin-top: 20px;
+/*
+
+=====================
+STYLE SWITCHER FOR DEMO
+=====================
+
+*/
+#style-switch-button {
+  position: fixed;
+  top: 120px;
+  left: 0px;
+  border-radius: 0;
+  z-index: 2;
 }
 
-p.social2 a {
-  margin: 0 10px 0 0;
-  color: #fff;
-  display: inline-block;
-  width: 38px;
-  height: 38px;
-  border-radius: 19px;
-  line-height: 38px;
-  font-size: 15px;
-  text-align: center;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  vertical-align: bottom;
+#style-switch {
+  width: 300px;
+  padding: 20px;
+  position: fixed;
+  top: 160px;
+  left: 0;
+  background: #fff;
+  border: solid 1px #ced4da;
+  z-index: 2000;
 }
 
-p.social2 a i {
-  vertical-align: bottom;
-  line-height: 38px;
-}
-
-p.social2 a.github {
-  background-color: #666;
-}
-
-p.social2 a.linkedin {
-  background-color: #333;
-}
-
-p.social2 a.email {
-  background-color: #666;
+#style-switch h4 {
+  color: #555;
 }
 
 /* =========================================
